# GEO-Insurance-RAG

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  setup.sh  start.sh  stop.sh
admin/backend/: Dockerfile  config.py  main.py  poller.py  pyproject.toml  ws.py
admin/backend/routers/: chunks.py  documents.py  eval.py  graph.py  logs.py  queries.py  query_playground.py  system.py
admin/backend/services/: chunks.py  eval.py  graph.py  opensearch.py  query_playground.py
admin/frontend/: Dockerfile  package-lock.json  package.json  pnpm-lock.yaml
data/failed/: .cleared
docker/: Caddyfile  docker-compose.yml
docs/superpowers/plans/: 2026-03-22-mcp-rag-insurance-plan.md  2026-03-23-heartbeat-ingestion-callback.md  2026-03-24-admin-dashboard.md  (+2 more)
openclaw/: SETUP.md
openclaw/katrina/: AGENTS.md  HEARTBEAT.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md
src/: config.py  ingestion.py  logging_service.py  metadata.py  rag.py  server.py  versioning.py  watcher.py
tests/: conftest.py  test_config.py  test_ingestion.py  test_integration.py  test_logging_service.py  test_metadata.py  test_rag.py  test_server.py  test_versioning.py  test_watcher.py
tests/admin/: conftest.py  test_admin_config.py  test_graph_service.py  test_poller.py  test_routers_chunks.py  test_routers_documents.py  test_routers_eval.py  test_routers_graph.py  test_routers_logs.py  test_routers_queries.py  test_routers_query_playground.py  test_routers_system.py  test_services_chunks.py  test_services_eval.py  test_services_opensearch.py  test_services_query_playground.py  test_ws.py
(+63 files in other folders)
